force-app/main/default/objects/Social_Media_Identifier__c/Social_Media_Identifier__c.object-meta.xml
<CustomObject>
    <label>Social Media Identifier</label>
    <nameField>
        <displayFormat>SMI-{0000}</displayFormat>
        <label>Social Media Identifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Social Media Identifiers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>