force-app/main/default/objects/Social_Media_Identifier__c/fields/Avatar_Img__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Img__c</fullName>
    <formula>IMAGE( Avatar__c , &quot;Avatar&quot;, 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avatar Img</label>
    <type>Text</type>
</CustomField>