force-app/main/default/objects/Social_Media_Identifier__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Client (PersonAccount)</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Social Media Identifiers</relationshipLabel>
    <relationshipName>Social_Media_Identifiers</relationshipName>
    <type>Lookup</type>
</CustomField>