force-app/main/default/objects/Social_Media_Identifier__c/fields/Dream_Id__c.field-meta.xml
<CustomField>
    <fullName>Dream_Id__c</fullName>
    <formula>Client__r.DREAMID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dream Id</label>
    <type>Text</type>
</CustomField>