force-app/main/default/objects/Social_Media_Identifier__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Follow Up Date</label>
    <type>Date</type>
</CustomField>