force-app/main/default/objects/Social_Media_Identifier__c/fields/isBound__c.field-meta.xml
<CustomField>
    <fullName>isBound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>deprecated</description>
    <label>isBound</label>
    <type>Checkbox</type>
</CustomField>