force-app/main/default/objects/Social_Media_Identifier__c/fields/LotteryW__c.field-meta.xml
<CustomField>
    <fullName>LotteryW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the winner of the lottery for Ladyb</description>
    <label>LotteryW</label>
    <type>Checkbox</type>
</CustomField>