force-app/main/default/objects/Social_Media_Identifier__c/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the client contactable by this social media?</description>
    <label>Opt In</label>
    <type>Checkbox</type>
</CustomField>