force-app/main/default/objects/Social_Media_Identifier__c/fields/Social_Enterprise_Id__c.field-meta.xml
<CustomField>
    <fullName>Social_Enterprise_Id__c</fullName>
    <description>WeCom ID from Client</description>
    <externalId>true</externalId>
    <label>Social Enterprise Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>