force-app/main/default/objects/Social_Media_Identifier__c/fields/Social_Id__c.field-meta.xml
<CustomField>
    <fullName>Social_Id__c</fullName>
    <description>User identifier from social media</description>
    <label>Social Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>