force-app/main/default/objects/Social_Media_Identifier__c/fields/Social_Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Type__c</fullName>
    <description>Name of the social media</description>
    <label>Social Media Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Kakao</fullName>
            </value>
            <value>
                <fullName>KakaoTalk message</fullName>
            </value>
            <value>
                <fullName>LineWorks</fullName>
            </value>
            <value>
                <fullName>LVxYKGamingApp</fullName>
            </value>
            <value>
                <fullName>LineThai</fullName>
            </value>
            <value>
                <fullName>LineTaiwan</fullName>
            </value>
            <value>
                <fullName>LineTW</fullName>
            </value>
            <value>
                <fullName>LineLV</fullName>
            </value>
            <value>
                <fullName>WeChat_Mobile</fullName>
                <isActive>false</isActive>
                <label>WeChat_Mobile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>