force-app/main/default/objects/Social_Media_Identifier__c/fields/Social_SF_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Social_SF_External_Id__c</fullName>
    <description>Concatenation Media Type + Social ID</description>
    <externalId>true</externalId>
    <label>Social SF External Id</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>