force-app/main/default/objects/Social_Media_Identifier__c/fields/Tech_isBound__c.field-meta.xml
<CustomField>
    <fullName>Tech_isBound__c</fullName>
    <formula>Client__r.LastName != &apos;NO_NAME&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_isBound</label>
    <type>Checkbox</type>
</CustomField>