force-app/main/default/objects/Social_Media_Identifier__c/fields/TECH_IsDreamIDChanged__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsDreamIDChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_IsDreamIDChanged</label>
    <type>Checkbox</type>
</CustomField>