force-app/main/default/objects/Social_Media_Identifier__c/fields/TECH_Type_DreamId__c.field-meta.xml
<CustomField>
    <fullName>TECH_Type_DreamId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>TECH Type + DreamId</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>