force-app/main/default/objects/Social_Media_Identifier__c/validationRules/Restrict_Access_By_SM_Type_and_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Access_By_SM_Type_and_User</fullName>
    <active>true</active>
    <errorConditionFormula>(
 $User.Username == &apos;d1m.integration@louisvuitton.com&apos; 
 &amp;&amp;
 !ISPICKVAL(Social_Media_Type__c , &apos;WeChat&apos;)
)
||
(
 $User.Username == &apos;opt.integration@louisvuitton.com&apos; 
 &amp;&amp;
 !ISPICKVAL(Social_Media_Type__c , &apos;Line&apos;)
)</errorConditionFormula>
    <errorMessage>You don&apos;t have rights to create this type of social media identifier.</errorMessage>
</ValidationRule>