force-app/main/default/objects/Social_Media_Identifier__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Social_Id__c</columns>
    <columns>Social_Media_Type__c</columns>
    <columns>Opt_In__c</columns>
    <columns>Client__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Social_Media_Type__c</field>
        <operation>equals</operation>
        <value>Line,Kakao,LineWorks</value>
    </filters>
    <filters>
        <field>Follow_Up_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <label>ALL</label>
</ListView>