force-app/main/default/objects/Social_Media_Identifier__c/listViews/Kakao.listView-meta.xml
<ListView>
    <fullName>Kakao</fullName>
    <columns>NAME</columns>
    <columns>Social_Id__c</columns>
    <columns>Client__c</columns>
    <columns>Nickname__c</columns>
    <columns>Opt_In__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Social_Media_Type__c</field>
        <operation>equals</operation>
        <value>Kakao</value>
    </filters>
    <label>Kakao</label>
    <language>en_US</language>
</ListView>