force-app/main/default/objects/Social_Media_Identifier__c/listViews/Line.listView-meta.xml
<ListView>
    <fullName>Line</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Dream_Id__c</columns>
    <columns>Social_Id__c</columns>
    <columns>Opt_In__c</columns>
    <columns>Nickname__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Social_Media_Type__c</field>
        <operation>equals</operation>
        <value>Line</value>
    </filters>
    <label>Line</label>
</ListView>